# Strata

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.save  FIELD_TEST_REPORT_2026-04-17.md  FIELD_VALIDATION_REPORT.md  FIELD_VALIDATION_v10_REPORT.md  FIELD_VALIDATION_v11_REPORT.md  FIELD_VALIDATION_v12_REPORT.md  FIELD_VALIDATION_v15_REPORT.md  FIELD_VALIDATION_v16_REPORT.md  FIELD_VALIDATION_v6_REPORT.md  FIELD_VALIDATION_v7_REPORT.md  FIELD_VALIDATION_v8_REPORT.md  FIELD_VALIDATION_v9_REPORT.md  LARGE_EVIDENCE_AUDIT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SESSION_STATE.md  SESSION_STATE_POST_V16_FIXES_COMPLETE.md  SESSION_STATE_POST_V16_SIGMA_ALIGNMENT_COMPLETE.md  SESSION_STATE_POST_V16_SIGMA_COMPLETE.md  SESSION_STATE_POST_V16_SIGMA_INVENTORY_COMPLETE.md  SESSION_STATE_POST_V16_SPRINT_3_COMPLETE.md  SESSION_STATE_POST_V16_SPRINT_4_COMPLETE.md  SESSION_STATE_POST_V16_SPRINT_5_COMPLETE.md  SESSION_STATE_POST_V16_SPRINT_6_5_COMPLETE.md  SESSION_STATE_POST_V16_SPRINT_6_COMPLETE.md  SESSION_STATE_POST_V16_SPRINT_7_COMPLETE.md  SESSION_STATE_v10.md  SESSION_STATE_v10_BLOCKER.md  SESSION_STATE_v11.md  SESSION_STATE_v11_BLOCKER.md  SESSION_STATE_v12.md  SESSION_STATE_v12_BLOCKER.md  SESSION_STATE_v13.md  SESSION_STATE_v13_BLOCKER.md  (+65 more)
crates/strata-core/: Cargo.toml
crates/strata-core/src/: capabilities.rs  crypto_detect.rs  custody.rs  export_v3.rs  hashing_utils.rs  ioc.rs  knowledge_bank.rs  lib.rs  notes.rs  parser.rs  plugin.rs  timeline.rs
crates/strata-core/tests/: file_index_bench.rs  ground_truth_v9.rs
crates/strata-csam/: Cargo.toml
crates/strata-csam/src/: audit.rs  hash_db.rs  lib.rs  perceptual.rs  report.rs  scanner.rs
crates/strata-engine-adapter/: Cargo.toml
crates/strata-engine-adapter/examples/: p1_folder_ingest.rs
crates/strata-engine-adapter/src/: csam.rs  custody.rs  evidence.rs  files.rs  hash_sets.rs  hashing.rs  lib.rs  plugins.rs  store.rs  types.rs  vfs_materialize.rs
crates/strata-engine-adapter/tests/: advisory_wiring.rs
crates/strata-evidence/: Cargo.toml
crates/strata-evidence/src/: dispatch.rs  e01.rs  image.rs  lib.rs  raw.rs  vhd.rs  vmdk.rs
crates/strata-fs/: Cargo.toml
crates/strata-fs/examples/: p3_archive_check.rs
crates/strata-fs/src/: apfs.rs  apfs_advanced.rs  apfs_walker.rs  bitlocker.rs  btrfs_advanced.rs  detect.rs  errors.rs  ext4.rs  ext4_advanced.rs  f2fs.rs  fs_dispatch.rs  hfsplus.rs  iso9660.rs  lib.rs  mft.rs  mft_walker.rs  ntfs.rs  ntfs_parser.rs  ntfs_usn.rs  regions.rs  shadowcopy.rs  snapshot.rs  summary.rs  timeline.rs  vfs.rs  xfs.rs  xfs_advanced.rs  zfs.rs
crates/strata-fs/tests/: ground_truth_fat.rs  ground_truth_hfsplus.rs  ground_truth_ntfs.rs
crates/strata-insight/: Cargo.toml
crates/strata-insight/src/: behavior.rs  correlation.rs  credentials.rs  hash.rs  integrity.rs  kb_assist.rs  lib.rs  noise_filter.rs  reporting.rs  search.rs  sqlite_viewer.rs  threat.rs  timeline.rs  yara.rs
crates/strata-license/: Cargo.toml
crates/strata-license/src/: error.rs  fingerprint.rs  free_tier.rs  lib.rs  license.rs  tests.rs  trial.rs  validator.rs
crates/strata-ml-anomaly/: Cargo.toml
crates/strata-ml-anomaly/src/: engine.rs  features.rs  lib.rs  types.rs
crates/strata-ml-charges/: Cargo.toml
crates/strata-ml-charges/src/: engine.rs  gap_analyzer.rs  lib.rs  matrix.rs  rules.rs  types.rs
crates/strata-ml-summary/: Cargo.toml
crates/strata-ml-summary/src/: extractor.rs  generator.rs  lib.rs  template_engine.rs  types.rs
crates/strata-shield-cli/: Cargo.toml
crates/strata-shield-cli/.\exports\smoke_test/: smoke_summary.json
crates/strata-shield-cli/src/: envelope.rs  main.rs
crates/strata-shield-cli/tests/: fixture_smoke_tests.rs  golden_contracts.json  json_contract_golden.rs  smoke_test.rs  sprint6_consumer_audit.rs
crates/strata-shield-cli/tests_temp_contract_timeline/: test_case.sqlite  timeline_contract.json
crates/strata-shield-cli/tests_temp_examine_json_success_1773367790793624900/: case.sqlite-shm  case.sqlite-wal  examine_result.json
crates/strata-shield-cli/tests_temp_examine_json_success_1773367909858308000/: case.sqlite  case.sqlite-shm  case.sqlite-wal  examine_result.json
crates/strata-shield-cli/tests_temp_recent_execution_success_1773767368270366300/: recent_execution.json  sample.automaticdestinations-ms
crates/strata-shield-cli/tests_temp_timeline_amcache_source/: timeline_amcache_result.json
crates/strata-shield-cli/tests_temp_timeline_bam_dam_source/: timeline_bam_dam_result.json
crates/strata-shield-cli/tests_temp_timeline_browser_forensics_source/: timeline_browser_forensics_result.json
crates/strata-shield-cli/tests_temp_timeline_cursor_contract/: timeline_cursor_page1.json  timeline_cursor_page2.json
crates/strata-shield-cli/tests_temp_timeline_defender_source/: timeline_defender_result.json
crates/strata-shield-cli/tests_temp_timeline_evtx_security_source/: timeline_evtx_security_result.json
crates/strata-shield-cli/tests_temp_timeline_evtx_sysmon_source/: timeline_evtx_sysmon_result.json
crates/strata-shield-cli/tests_temp_timeline_execution_source/: timeline_execution_result.json
crates/strata-shield-engine/: Cargo.toml  check_output.txt  err.txt  full_err.txt
crates/strata-tree-sdk/: Cargo.toml  README.md
plugins/strata-plugin-advisory/: Cargo.toml
plugins/strata-plugin-apex/: Cargo.toml
plugins/strata-plugin-arbor/: Cargo.toml
plugins/strata-plugin-carbon/: Cargo.toml
plugins/strata-plugin-chronicle/: Cargo.toml  plugin_description.md
plugins/strata-plugin-cipher/: Cargo.toml  plugin_description.md
plugins/strata-plugin-csam/: Cargo.toml
plugins/strata-plugin-guardian/: Cargo.toml
plugins/strata-plugin-index/: Cargo.toml
plugins/strata-plugin-mactrace/: Cargo.toml
plugins/strata-plugin-netflow/: Cargo.toml
plugins/strata-plugin-nimbus/: Cargo.toml  plugin_description.md
plugins/strata-plugin-phantom/: Cargo.toml
plugins/strata-plugin-pulse/: Cargo.toml
plugins/strata-plugin-remnant/: Cargo.toml  plugin_description.md
plugins/strata-plugin-sentinel/: Cargo.toml
(+6459 files in other folders)
