[workspace]
resolver = "2"
members = [
    "apps/tree/strata-tree",
    "crates/strata-shield-engine",
    "crates/strata-shield-cli",
    "apps/tree/vt-core",
    "apps/tree/vt-cli",
    "apps/tree/vt-index",
    "apps/tree/vt-snapshot",
    "apps/forge/apps/strata-forge-desktop/src-tauri",
    "crates/strata-acquire",
    "crates/strata-artifacts",
    "crates/strata-core",
    "crates/strata-forge-core",
    "crates/strata-fs",
    "crates/strata-insight",
    "crates/strata-plugin-sdk",
    # strata-plugin-index is a cdylib-only dynamic-loader scaffold; not
    # statically linked into strata-engine-adapter. See
    # docs/PLUGIN_ARCHITECTURE.md (FIX-5).
    "plugins/strata-plugin-index",
    "plugins/strata-plugin-chronicle",
    "plugins/strata-plugin-trace",
    "plugins/strata-plugin-cipher",
    "plugins/strata-plugin-remnant",
    "plugins/strata-plugin-tree-example",
    "crates/strata-tree-sdk", "crates/strata-license", "tools/wolfmark-license-gen",
    "plugins/strata-plugin-specter",
    "plugins/strata-plugin-conduit",
    "plugins/strata-plugin-nimbus",
    "plugins/strata-plugin-wraith",
    "plugins/strata-plugin-vector",
    "plugins/strata-plugin-recon",
    "plugins/strata-plugin-sigma",
    "plugins/strata-plugin-phantom",
    "plugins/strata-plugin-guardian",
    "plugins/strata-plugin-netflow",
    "plugins/strata-plugin-mactrace",
    "plugins/strata-plugin-sentinel",
    "plugins/strata-plugin-csam",
    "plugins/strata-plugin-pulse",
    "plugins/strata-plugin-carbon",
    "plugins/strata-plugin-vault",
    "plugins/strata-plugin-apex",
    "plugins/strata-plugin-arbor",
    "crates/strata-engine-adapter",
    "crates/strata-csam",
    "crates/strata-charges",
    "crates/strata-ml-obstruction",
    "crates/strata-ml-anomaly",
    "crates/strata-ml-charges",
    "crates/strata-ml-summary",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
libloading = "0.8"
libc = "0.2"
arc-swap = "1.6"
notify = "6.0"
rusqlite = { version = "0.30", features = ["bundled", "functions"] }
evtx = "0.8"
ntfs = "0.4"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
blake3 = "1.5"
Tera = "1.19"
regex = "1.10"
sysinfo = "0.33"
memmap2 = "0.9"
plist = "1.7"
tar = "0.4"
flate2 = "1.0"
zip = "2.0"
ewf = "0.1"
winreg = "0.50"
serde_yaml = "0.9"
tempfile = "3.8"
rayon = "1.8"

# INTERNAL STRATA CRATES (CANONICAL NAMES)
strata-core = { path = "crates/strata-core" }
strata-fs = { path = "crates/strata-fs" }
strata-plugin-sdk = { path = "crates/strata-plugin-sdk" }
strata-acquire = { path = "crates/strata-acquire" }
strata-artifacts = { path = "crates/strata-artifacts" }
strata-insight = { path = "crates/strata-insight" }
strata-forge-core = { path = "crates/strata-forge-core" }
strata-shield-engine = { path = "crates/strata-shield-engine" }
strata-shield-cli = { path = "crates/strata-shield-cli" }
strata-csam = { path = "crates/strata-csam" }
strata-charges = { path = "crates/strata-charges" }
strata-ml-summary = { path = "crates/strata-ml-summary" }
vt-core = { path = "apps/tree/vt-core" }
