[package]
name = "strata-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }
plist = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
rusqlite = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
libloading = { workspace = true }
strata-plugin-sdk = { workspace = true }
strata-fs = { workspace = true }
serde_yaml = { workspace = true }
rayon = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
ntfs = { workspace = true }
evtx = { workspace = true }
ewf = { workspace = true }
winreg = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
turbo = ["rayon", "parallel"]
python-plugins = []
lua-plugins = []
