[package]
name = "strata-engine-adapter"
version = "1.3.0"
edition = "2021"
description = "Stable, JSON-friendly adapter between strata-fs/strata-core and the Strata desktop UI."
license = "Proprietary"

[lib]
name = "strata_engine_adapter"
path = "src/lib.rs"

[dependencies]
# Engine crates we wrap.
strata-fs = { path = "../strata-fs" }
strata-core = { path = "../strata-core" }
strata-evidence = { path = "../strata-evidence" }
strata-plugin-sdk = { path = "../strata-plugin-sdk" }

# Built-in plugins (statically linked, CJIS compliance).
strata-plugin-chronicle = { path = "../../plugins/strata-plugin-chronicle" }
strata-plugin-cipher    = { path = "../../plugins/strata-plugin-cipher" }
strata-plugin-conduit   = { path = "../../plugins/strata-plugin-conduit" }
strata-plugin-nimbus    = { path = "../../plugins/strata-plugin-nimbus" }
strata-plugin-recon     = { path = "../../plugins/strata-plugin-recon" }
strata-plugin-remnant   = { path = "../../plugins/strata-plugin-remnant" }
strata-plugin-sigma     = { path = "../../plugins/strata-plugin-sigma" }
strata-plugin-advisory  = { path = "../../plugins/strata-plugin-advisory" }
strata-plugin-specter   = { path = "../../plugins/strata-plugin-specter" }
strata-plugin-trace     = { path = "../../plugins/strata-plugin-trace" }
strata-plugin-vector    = { path = "../../plugins/strata-plugin-vector" }
strata-plugin-wraith    = { path = "../../plugins/strata-plugin-wraith" }
strata-plugin-phantom   = { path = "../../plugins/strata-plugin-phantom" }
strata-plugin-guardian  = { path = "../../plugins/strata-plugin-guardian" }
strata-plugin-netflow   = { path = "../../plugins/strata-plugin-netflow" }
strata-plugin-mactrace  = { path = "../../plugins/strata-plugin-mactrace" }
strata-plugin-sentinel  = { path = "../../plugins/strata-plugin-sentinel" }
strata-plugin-csam      = { path = "../../plugins/strata-plugin-csam" }
strata-plugin-apex      = { path = "../../plugins/strata-plugin-apex" }
strata-plugin-carbon    = { path = "../../plugins/strata-plugin-carbon" }
strata-plugin-pulse     = { path = "../../plugins/strata-plugin-pulse" }
strata-plugin-vault     = { path = "../../plugins/strata-plugin-vault" }
strata-plugin-arbor     = { path = "../../plugins/strata-plugin-arbor" }

# CSAM scanner core (used by the Forge IPC commands in src/csam.rs).
strata-csam = { workspace = true }

# Serialization + IPC-friendly types.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"

# Async runtime + concurrency.
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
rayon = "1"

# Hashing.
md-5  = "0.10"
sha1  = "0.10"
sha2  = "0.10"
hex   = "0.4"

# Misc.
anyhow   = "1"
tracing  = "0.1"
once_cell = "1"
chrono   = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
uuid     = { workspace = true }
strata-plugin-advisory = { path = "../../plugins/strata-plugin-advisory" }
strata-plugin-sigma    = { path = "../../plugins/strata-plugin-sigma" }
