[package]
name = "strata-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
zip = { workspace = true }
plist = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
rusqlite = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
rayon = { workspace = true, optional = true }

ewf = { workspace = true }

[target.'cfg(windows)'.dependencies]
ntfs = { workspace = true }
evtx = { workspace = true }
winreg = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
turbo = ["rayon", "parallel"]
