[package]
name = "strata-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
strata-evidence = { path = "../strata-evidence" }
ntfs = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
log = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
zip = { workspace = true }
plist = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
rusqlite = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
rayon = { workspace = true, optional = true }

ewf = { workspace = true }
ext4-view = "0.9"
# MIT-licensed external APFS parser. Real-fixture validated per
# docs/RESEARCH_v16_APFS_RUST_ECOSYSTEM.md Session 1.5 (7/7 core
# parser checks passed against hdiutil-generated container).
# Wrapped by Strata-owned code in crates/strata-fs/src/apfs_walker/
# for multi-volume iteration, xattrs, encryption marking, and
# fusion-drive detection the crate doesn't expose on its high-
# level ApfsVolume API.
apfs = "0.2"

[target.'cfg(windows)'.dependencies]
ntfs = { workspace = true }
evtx = { workspace = true }
winreg = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
turbo = ["rayon", "parallel"]
