[package]
name = "strata-insight"
version = "0.1.0"
edition = "2021"

[dependencies]
strata-core = { workspace = true }
strata-artifacts = { path = "../strata-artifacts" }
time = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
rayon = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
turbo = ["rayon", "parallel"]
