[package]
name = "strata-ml-anomaly"
version = "0.1.0"
edition = "2021"
description = "Statistical anomaly detection on artifact timelines — advisory ML analysis for Strata"
license = "Proprietary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
strata-plugin-sdk = { path = "../strata-plugin-sdk" }

[features]
default = ["statistical"]
statistical = []
