[package]
name = "strata-ml-charges"
version = "0.1.0"
edition = "2021"
description = "Charge-to-evidence mapping and charge suggestions — advisory analysis for Strata"
license = "Proprietary"

[dependencies]
strata-charges = { path = "../strata-charges" }
strata-plugin-sdk = { path = "../strata-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = "0.4"
