[package]
name = "strata-shield-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
forensic_engine = { package = "strata-shield-engine", path = "../strata-shield-engine" }
strata-engine-adapter = { path = "../strata-engine-adapter" }
strata-plugin-sdk = { path = "../strata-plugin-sdk" }
strata-artifacts = { workspace = true }
strata-fs = { workspace = true }
strata-core = { workspace = true }
strata-evidence = { path = "../strata-evidence" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { workspace = true }
whoami = "1.5"
uuid = { workspace = true }
time = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
colored = "2.0"

[dev-dependencies]
tempfile = { workspace = true }
tar = { workspace = true }
