[package]
name = "strata-plugin-apex"
version = "1.0.0"
edition = "2021"
description = "Apex — Apple-built app artifacts. EXIF, Mail, Calendar, Contacts, Notes."
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
