[package]
name = "strata-plugin-arbor"
version = "1.0.0"
edition = "2021"
description = "ARBOR — Linux and Unix system forensic artifacts. Shell history, persistence, user activity, system configuration changes."
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
