[package]
name = "strata-plugin-carbon"
version = "1.0.0"
edition = "2021"
description = "Carbon — Google-built app artifacts. Chromium history, logins, autofill, favicons, network_action_predictor."
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }
