[package]
name = "strata-plugin-chronicle"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
strata-core = { path = "../../crates/strata-core" }
strata-fs = { path = "../../crates/strata-fs" }
strata-artifacts = { path = "../../crates/strata-artifacts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
cfb = "0.14"
nt-hive = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
