[package]
name = "strata-plugin-cipher"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
strata-core = { path = "../../crates/strata-core" }
strata-fs = { path = "../../crates/strata-fs" }
strata-artifacts = { path = "../../crates/strata-artifacts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
