[package]
name = "strata-plugin-index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
strata-core = { path = "../../crates/strata-core" }
strata-fs = { path = "../../crates/strata-fs" }
strata-artifacts = { path = "../../crates/strata-artifacts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
plist = "1.7"
tracing = "0.1"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
ntfs = { workspace = true }
winreg = { workspace = true }
evtx = { workspace = true }
