[package]
name = "strata-plugin-mactrace"
version = "1.0.0"
edition = "2021"
description = "MacTrace — macOS/iOS artifact plugin. LaunchAgents, KnowledgeC, PowerLog, locationd, SMS, CallHistory."
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
