[package]
name = "strata-plugin-netflow"
version = "1.0.0"
edition = "2021"
description = "NetFlow — Network forensics. PCAP, IIS/Apache logs, DNS cache, wireless profiles, exfil tool detection."
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
