[package]
name = "strata-plugin-nimbus"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }
