[package]
name = "strata-plugin-phantom"
version = "1.0.0"
edition = "2021"
description = "Phantom — Registry Intelligence Engine. Owns SYSTEM/SOFTWARE/SAM/AmCache/USRCLASS hive parsing for Strata."
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
strata-fs = { path = "../../crates/strata-fs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nt-hive = "0.3"

# Prefetch deep parser. forensic-rs supplies the VirtualFile trait the
# in-memory adapter implements; frnsc-prefetch is the actual binary parser.
# Same versions as strata-core to keep the workspace lockfile coherent.
forensic-rs = "0.13"
frnsc-prefetch = "0.13"

# Structured logging per CLAUDE.md (no println allowed).
log = "0.4"
