[package]
name = "strata-plugin-pulse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
rusqlite = { version = "0.30", features = ["bundled"] }
serde_json = "1.0"
chrono = { version = "0.4" }

[dev-dependencies]
tempfile = "3.8"
