[package]
name = "strata-plugin-pulse"
version = "1.0.0"
edition = "2021"
description = "Pulse — iOS and Android artifact parsers (KnowledgeC, SMS, CallHistory, Contacts, Safari, Photos, Health, Location, AppInstall, Notes, Notifications, ScreenTime, and more)."
license = "Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strata-plugin-sdk = { path = "../../crates/strata-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
plist = "1.7"
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
